stack.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Conjur CE Stack, backed by a PostgreSQL database on RDS

# XXX Except for AMI id, all defaults below should get removed
Parameters:
  ConjurAccount:
    Type: String
    Description: Name of Conjur account
    Default: ajpdev

  ConjurAdminPassword:
    Type: String
    NoEcho: true
    Description: Password for Conjur admin account
    Default: secret

  DBAdminUser:
    Type: String
    Description: RDS instance admin user
    Default: conjuradmin

  DBAdminPassword:
    Type: String
    NoEcho: true
    Description: RDS instance admin password
    Default: reallysecret

  ImageId:
    Type: AWS::EC2::Image::Id
    Description: Conjur CE AMI
    Default: ami-ee744495

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: AWS keypair to use
    Default: ajp-conjur-aws

  VpcId:
    Type: AWS::EC2::VPC::Id 
    Description: VPC in which to launch instances
    Default: vpc-e64d6181

  VpcSubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: VPC subnet in which to launch instances
    Default: subnet-b58e22fc


Metadata:
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "Conjur Configuration"
        Parameters:
          - ConjurAccount
          - ConjurAdminPassword
          - DBAdminUser
          - DBAdminPassword
      - 
        Label: 
          default: "EC2 Instance Configuration"
        Parameters:
          - ImageId
          - KeyName
          - VpcId
          - VpcSubnetId

Resources:
  ConjurSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group for Conjur server"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp  # SSH
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp  # Conjur
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  RDSInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      Engine: postgres
      EngineVersion: 9.3.17
      AllocatedStorage: 5
      DBInstanceClass: db.t2.medium
      MasterUsername: !Ref DBAdminUser
      MasterUserPassword: !Ref DBAdminPassword
      PubliclyAccessible: false
      DBSubnetGroupName: default-vpc-e64d6181

  ConjurInstance:
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: !Ref ImageId
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      SecurityGroupIds: [!Ref ConjurSecurityGroup]
      SubnetId: !Ref VpcSubnetId
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -ex

          # Only initialize once
          if grep -q CONJUR_DATA_KEY /etc/default/conjur; then 
            exit 0;
          fi

          cat - >>/etc/default/conjur <<EOF
          CONJUR_ACCOUNT=${ConjurAccount}
          CONJUR_DATA_KEY=$(docker run --rm conjur data-key generate)
          DATABASE_URL=postgres://${DBAdminUser}:${DBAdminPassword}@${RDSInstance.Endpoint.Address}/postgres
          RAILS_ENV=production
          EOF

          admin_api_key="$(/opt/conjur/bin/server create | awk '/API key for admin/ {print $NF}' | tee /etc/default/admin_api_key)"
          /opt/conjur/bin/set_admin_password "$admin_api_key" "${ConjurAdminPassword}"
